--- a/day-1-flexbox/4-pie-flexbox/begin/css/styles.css
+++ b/day-1-flexbox/4-pie-flexbox/begin/css/styles.css
@@ -62,7 +62,7 @@ nav a:hover {
 .row:before, 
 .row:after {
     content:"";
-    display: table;
+    display: flex;
     clear:both;
 }
 div.row {
